--- a/index.html
+++ b/index.html
@@ -19,16 +19,91 @@
                     <div class="col-menu">
                         <div class="container-menu">
                             <img src="./img/logo-small.png" alt="Logo">
-                            <span>Perchè dropbox</span>
-                            <span>Funzioni</span>
-                            <span>Piani e prezzi</span>
+                            <div class="dropdown">
+                                <span class="grey1">Perchè dropbox</span>
+                                <div class="dropdown-content">
+                                    <a href="#section1"><strong>Tutto ciò che ti serve per il
+                                        lavoro, in un unico posto</strong></a>
+                                    <a href="#section2">Trova il piano business che fa per te</a>
+                                    <a href="#section3">Enterprise</a>
+                                    <a href="#section4">Entra in contatto con un partner Dropbox</a>
+                                    <a href="#section5">Esegui più operazioni con Dropbox Business</a>
+                                    <a href="#section7">Designit</a>
+                                    <a href="#section8">Porta Dropbox Business
+                                        nella tua azienda.</a>
+                                    <a href="#section9">Domande frequenti</a>
+                                    <a href="#footer">FAQ</a>
+                                </div>
+                            </div>
+                            <div class="dropdown">
+                                <span class="grey1">Funzioni</span>
+                                <div class="dropdown-content">
+                                    <a href="#section1"><strong>Tutto ciò che ti serve per il
+                                        lavoro, in un unico posto</strong></a>
+                                    <a href="#section2">Trova il piano business che fa per te</a>
+                                    <a href="#section3">Enterprise</a>
+                                    <a href="#section4">Entra in contatto con un partner Dropbox</a>
+                                    <a href="#section5">Esegui più operazioni con Dropbox Business</a>
+                                    <a href="#section7">Designit</a>
+                                    <a href="#section8">Porta Dropbox Business
+                                        nella tua azienda.</a>
+                                    <a href="#section9">Domande frequenti</a>
+                                    <a href="#footer">FAQ</a>
+                                </div>
+                            </div>
+                            <div class="dropdown">
+                                <span class="grey1">Piani e prezzi</span>
+                                <div class="dropdown-content">
+                                    <a href="#section1"><strong>Tutto ciò che ti serve per il
+                                        lavoro, in un unico posto</strong></a>
+                                    <a href="#section2">Trova il piano business che fa per te</a>
+                                    <a href="#section3">Enterprise</a>
+                                    <a href="#section4">Entra in contatto con un partner Dropbox</a>
+                                    <a href="#section5">Esegui più operazioni con Dropbox Business</a>
+                                    <a href="#section7">Designit</a>
+                                    <a href="#section8">Porta Dropbox Business
+                                        nella tua azienda.</a>
+                                    <a href="#section9">Domande frequenti</a>
+                                    <a href="#footer">FAQ</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-menu">
                         <div class="container-menu">
-                            <span>Supporto</span>
-                            <span>Contatta l'ufficio vendite</span>
-                            <span>Accedi</span>
+                            <div class="dropdown">
+                                <span class="grey1">Supporto</span>
+                                <div class="dropdown-content1">
+                                    <a href="#section1"><strong>Tutto ciò che ti serve per il
+                                        lavoro, in un unico posto</strong></a>
+                                    <a href="#section2">Trova il piano business che fa per te</a>
+                                    <a href="#section3">Enterprise</a>
+                                    <a href="#section4">Entra in contatto con un partner Dropbox</a>
+                                    <a href="#section5">Esegui più operazioni con Dropbox Business</a>
+                                    <a href="#section7">Designit</a>
+                                    <a href="#section8">Porta Dropbox Business
+                                        nella tua azienda.</a>
+                                    <a href="#section9">Domande frequenti</a>
+                                    <a href="#footer">FAQ</a>
+                                </div>
+                            </div>
+                            <div class="dropdown">
+                                <span class="grey1">Contatta l'ufficio vendite</span>
+                                <div class="dropdown-content1">
+                                    <a href="#section1"><strong>Tutto ciò che ti serve per il
+                                        lavoro, in un unico posto</strong></a>
+                                    <a href="#section2">Trova il piano business che fa per te</a>
+                                    <a href="#section3">Enterprise</a>
+                                    <a href="#section4">Entra in contatto con un partner Dropbox</a>
+                                    <a href="#section5">Esegui più operazioni con Dropbox Business</a>
+                                    <a href="#section7">Designit</a>
+                                    <a href="#section8">Porta Dropbox Business
+                                        nella tua azienda.</a>
+                                    <a href="#section9">Domande frequenti</a>
+                                    <a href="#footer">FAQ</a>
+                                </div>
+                            </div>
+                            <span class="grey1">Accedi</span>
                             <button>Inizia</button>
                         </div>
                     </div>
@@ -40,7 +115,7 @@
         <!-- MAIN -->
         <main>
             <!-- SEZIONE 1 -->
-            <section class="section1">
+            <section id="section1">
                 <div class="section1-full-container">
                     <div class="row-section1">
                         <div class="col-section1">
@@ -59,15 +134,14 @@
             <!-- FINE SEZIONE 1 -->
 
             <!-- INIZIO SEZIONE 2 -->
-            <section class="section2">
+            <section id="section2">
                 <h3>Trova il piano business che fa per te</h3>
-                <div class="inpunt">
-                    <input type="radio">
-                    <label>Fatturazione mensile</label>
-                    <input type="radio">
-                    <label>Fatturazione annuale</label>
-                </div>
-                <div class="section2-full-container">
+                    <div class="input">
+                        <input type="radio" id="Fatturazione mensile" name="opzione" value="Fatturazione mensile">
+                        <label>Fatturazione mensile</label>
+                        <input type="radio" id="Fatturazione annuale" name="opzione" value="Fatturazione annuale">
+                        <label>Fatturazione annuale</label>
+                    </div>
                     <div class="row-section2">
                         <div class="col-section2">
                             <div class="section2-container">
@@ -211,11 +285,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
             </section>
             <!-- FINE SEZIONE 2 -->
             <!-- INIZIO SEZIONE 3 -->
-            <section class="section3">
+            <section id="section3">
                 <h4><i class="fa-solid fa-building" style="color: #000000;"></i> Team</h4>
                 <div class="row-section3">
                     <div class="col-section3">
@@ -235,7 +308,7 @@
             <!-- FINE SEZIONE 3 -->
 
             <!-- INIZIO SEZIONE 4 -->
-            <section class="section4">
+            <section id="section4">
                 <div class="row-section4">
                     <div class="col-section4">
                         <div class="section4-container">
@@ -254,7 +327,7 @@
             <!-- FINE SEZIONE 4 -->
 
             <!-- INIZIO SEZIONE 5 -->
-            <section class="section5">
+            <section id="section5">
                 <div class="row-section5">
                     <h2>Esegui più operazioni con Dropbox Business</h2>
                     <div class="col-section5">
@@ -303,7 +376,7 @@
             </section>
             <!-- FINE SEZIONE 5 -->
             <!-- INIZIO SEZIONE 6 -->
-            <section class="section6">
+            <section id="section6">
                 <h2>Più di 500.000 team utilizzano <br> Dropbox Business</h2>
                 <a href="#">Scopri di più sui nostri clienti</a>
             </section>
@@ -311,7 +384,7 @@
             
             <!-- INIZIO SEZIONE 7 -->
 
-            <section class="section7">
+            <section id="section7">
                 <div class="row-section7">
                     <div class="col-section7">
                         <div class="row1-section7">
@@ -373,7 +446,7 @@
             <!-- FINE SEZIONE 7 -->
 
             <!-- INIZIO SEZIONE 8 -->
-            <section class="section8">
+            <section id="section8">
                 <div class="section8-1">
                     <div class="row-section8">
                         <div class="col-section8">
@@ -388,7 +461,7 @@
             <!-- FINE SEZIONE 8 -->
 
             <!-- INIZIO SEZIONE 9 -->
-            <section class="section9">
+            <section id="section9">
                 <div class="row-section9">
                     <div class="col-section9">
                         <div class="section9-container">
@@ -427,7 +500,7 @@
 
         <!-- FOOTER -->
         <footer>
-            <div class="footer">
+            <div id="footer">
                 <div class="row-footer">
                     <div class="col-footer">
                         <div class="container-footer">
