--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                                     <h2>Prodotti</h2>
                                 </li>
                                 <li>
-                                    Applicazione desktop                                </li>
+                                    Applicazione desktop                                
                                 <li>
                                     Perché Dropbox
                                 </li>
