[FIX] Sistemata la parte section 7, section 9

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             <section id="section7">
                 <div class="row-section7">
                     <div class="col-section7">
-                        <div class="row1-section7">
+                        <div class="row1-section7 height-100">
                             <div class="col1-section7 green">
                                 <div class="section7-container">
                                     <img src="./img/designit.svg" alt="designit">
