--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                                 <button>Inizia la tua prova gratuita</button>
                                 <p>Annulla in qualsiasi momento</p>
-                                <i class="fa-solid fa-arrow-down" style="color: #000000;"></i>
+                                <a href="#section2"><i class="fa-solid fa-arrow-down" style="color: #000000;"></i></a>
                                 <img src="./img/jumbo.png" alt="jumbo">
                             </div>
                         </div>
